SDIT-1410 UserResource (#1995)
* SDIT-1410 UserResource

* SDIT-1410 UserResource

Formatting, removing 'ROLE_', intellij warnings

* SDIT-1410 UserResource

Tests and tweaks

* SDIT-1410 UserResource

Tests and tweaks

---------

Co-authored-by: steverendell <steve.rendell@syscon.net>